Fix insufficient contrast in primary color

--- a/src/modules/unit/components/_single-unit-modal.scss
+++ b/src/modules/unit/components/_single-unit-modal.scss
@@ -9,14 +9,14 @@
     margin: 0;
     width: 100%;
     height: 100%;
-    background: #038ccc;
+    background: #0072c6;
   }
 
   &-content {
     height: 100%;
     border-radius: 0;
     border: 0;
-    background: #038ccc;
+    background: #0072c6;
     color: #333333;
     padding: 10px 10px 0;
     overflow-y: scroll;
@@ -113,7 +113,7 @@
       border-radius: 0;
       border: 0;
       height: 100%;
-      background: #038ccc;
+      background: #0072c6;
       color: #333333;
     }
   }
